<resources>
    <string name="app_name">Quizzz</string>
    <string name="start_single_player">Start Single Player</string>
    <string name="start_multi_player">Start Multiplayer</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="whats_your_name">What is your name?</string>
    <string name="find_player">Go to Lobby</string>
    <string name="find_opponent">Find opponent</string>
    <string name="startpage">Go back to startpage</string>
    <string name="Opponent_score">Opponent score: </string>
    <string name="Your_score">Your score: </string>
    <string name="result_multiplayer_win">You won!</string>
    <string name="result_multiplayer_lose">You lost!</string>
    <string name="result_multiplayer_tie">It is a tie!</string>
    <string name="high_score">Well done</string>
    <string name="type_your_name">Type Your Name</string>
    <string name="name">Name</string>
    <string name="done">Done!</string>
    <string name="secunds_remaining">Seconds remaining: </string>
    <string name="splash">Warning - Quizzz may be addictive </string>
    <string name="search">Searching for opponents... </string>
    <string name="no_bluetooth">Bluetooth is not supported</string>
    <string name="alert">Alert</string>
    <string name="OK">OK</string>
    <string name="fetching">Fetching questions</string>
    <string name="discoverable">Making Device Discoverable</string>
    <string name="question_counter">Question: </string>
    <string name="opponent_left">Opponent has left the game </string>
    <string name="error_fetching_questions">Error when fetching questions </string>
    <string name="wrong_message">Something went wrong, lost connection with opponent </string>
    <string name="vs"> vs </string>
    <string name="logo">Logo</string>
    <string name="question_0_10">Question 0/10</string>
    <string name="location_warning"> Need permission to your location for the application to work. Please try again. </string>
    <string name="opponent_didnt_respond"> Opponent does not respond</string>
</resources>
