<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="80dp"
        android:text="@string/select_difficulty"
        android:textAlignment="center"
        android:textSize="40sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button2"
        android:onClick="buttonEasyClicked"
        android:text="@string/easy"
        android:textSize="30sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button2"
        android:onClick="buttonMediumClicked"
        android:text="@string/medium"
        android:textSize="30sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button2"
        android:onClick="buttonHardClicked"
        android:text="@string/hard"
        android:textSize="30sp" />
</LinearLayout>
