<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:paddingTop="150dp"
        android:paddingBottom="150dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#D9B44A"
        android:textSize="60sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button"
        android:onClick="startSinglePlayer"


        android:text="@string/start_single_player"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button2"
        android:onClick="startMultiPlayer"


        android:text="@string/start_multi_player"
        android:textSize="20sp" />

</LinearLayout>

